[FrontEnd] Added second step of the form

--- a/FrontEnd/custom_form/form.css
+++ b/FrontEnd/custom_form/form.css
@@ -17,4 +17,10 @@
   .information-pair:not(:last-child) {
     padding-right: 10px; }
 
+.sub-title {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; 
+  }
+
 /*# sourceMappingURL=form.css.map */
