--- a/FrontEnd/custom_form/form.scss
+++ b/FrontEnd/custom_form/form.scss
@@ -16,6 +16,7 @@
             width:100%;
         }
     }
+   
 }
 .information-pair{
     width:95%;
@@ -24,3 +25,9 @@
     }
 
 }
+
+ .sub-title{
+        display:flex;
+        flex-direction:column;
+        align-items: flex-start;
+    }
