--- a/FrontEnd/dashboard/dashboard.css
+++ b/FrontEnd/dashboard/dashboard.css
@@ -44,21 +44,22 @@ hr {
     border-width: 1px;
 }
 input[type=text] {
+    width: 100%;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
     background-color: white;
+    background-image: url('searchicon.png');
     background-position: 10px 10px;
     background-repeat: no-repeat;
-    padding-left: 40px;
+    padding: 12px 20px 12px 40px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
 }
-/* When the input field gets focus, change its width to 100% */
-/
+
 input[type=text]:focus {
     width: 100%;
-}
-div.tab-content {
-    background-color:white;
-    color:#668cff;
-  /*  margin: 20px 0 20px 0;*/
-    padding: 20px;
 }
 /*
 .button {
@@ -138,4 +139,100 @@ p{
     margin-right: 10px;
     float: left;
       border-radius: 100%;
+}
+
+
+
+#header {
+  float: left;
+  width: 100%;
+  background: #ffffff;
+  position: relative;
+}
+.header-nav {
+  min-height: 50px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: white;
+  box-shadow: 3px 1px 10px 0 rgba(0, 0, 0, 0.15);
+}
+.menu-button {
+  float: left;
+  font-size: 29px;
+  color: #fff;
+  padding: 12px 19px;
+}
+.nav ul {
+  height: 64px;
+  float: right;
+}
+.nav ul li {
+  float: left;
+  position: relative;
+  padding: 11px;
+}
+.nav > ul > li:first-child {
+  border-left: none;
+}
+.nav ul li a {
+  color: #fff;
+  padding: 1px;
+  float: left;
+}
+.nav ul li i {
+  color: #fff;
+}
+.nav ul li:hover {
+  background: #01A9F0;
+  color: #fff;
+}
+
+
+.widget-box {
+  background: #fff;
+  border: 1px solid #E0E0E0;
+  float: left;
+  width: 100%;
+  margin: 10px 10px 10px 10px;
+  box-shadow: 3px 1px 10px 0 rgba(0, 0, 0, 0.15);
+}
+.widget-header {
+  background: #3388CB;
+}
+.widget-header h2 {
+  font-size: 15px;
+  font-weight: normal;
+  margin: 0;
+  padding: 11px 15px;
+  color: #F9F9F9;
+  display: inline-block;
+}
+.sample-widget {max-width: 52%;}
+
+.sample-widget2 {
+  max-width: 25%;
+}
+
+
+.widget-box .fa-cog {
+  float: right;
+  color: #fff;
+  margin: 11px 11px 0 0;
+  font-size: 20px;
+}
+
+.main {
+    width: 80%;
+    float: right;
+}
+
+.main p{
+   text-indent: 1.5em;
+   font-size: 14px;
+}
+h2{
+  font-family: "Roboto", sans-serif;
+  text-indent: 1em;
+  	color: #cccccc;
 }
