--- a/FrontEnd/landing_page/css/style.css
+++ b/FrontEnd/landing_page/css/style.css
@@ -123,3 +123,13 @@ footer {
  .social {
  	padding: 20px 20px 20px 0; 
  }
+
+ .leftSide {
+ 	float: left;
+ 	width: 50%;
+ }
+
+ .rightSide {
+ 	float: right;
+ 	width: 50%;
+ }
