--- a/FrontEnd/dashboard/profesori.css
+++ b/FrontEnd/dashboard/profesori.css
@@ -1,3 +1,16 @@
+Skip to content
+Features Business Explore Pricing
+This repository
+Search
+Sign in or Sign up
+ Watch 5  Star 0  Fork 3 ip-b1-2017/fii-admission
+ Code  Issues 0  Pull requests 0  Projects 0  Pulse  Graphs
+Branch: master Find file Copy pathfii-admission/FrontEnd/dashboard/classroom.css
+c53cc1d  2 hours ago
+@gabrielaivascu gabrielaivascu Add files via upload
+1 contributor
+RawBlameHistory     
+273 lines (234 sloc)  4.64 KB
 body {
     margin: 0;
 }
@@ -42,6 +55,7 @@ hr {
     border-style: inset;
     border-width: 1px;
 }
+
 p{
 	font-size:70%;
 	color: #cccccc;
@@ -80,6 +94,8 @@ p{
     float: left;
       border-radius: 100%;
 }
+
+
 
 #header {
   float: left;
@@ -181,6 +197,8 @@ h3{
   margin-left: auto;
   margin-right: auto ;
 }
+
+
 input {
     width: 30%;
     padding: 12px 20px;
@@ -189,42 +207,29 @@ input {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+    margin-left: 16px;
 }
-.dropbtn {
+
+input[type=submit] {
+    width: 13%;
     background-color: #3388CB;
     color: white;
-    padding: 16px;
-    font-size: 16px;
+    padding: 14px 20px;
+	  margin: 8px 0;
     border: none;
+    border-radius: 4px;
     cursor: pointer;
 }
 
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #1C537E;
+label{
+  margin-left: 16px;
+  font-family: "Roboto", sans-serif;
+  font-size:16px;
 }
 
-.dropdown {
-    position: relative;
-    display: inline-block;
+h3{
+  font-family: "Roboto", sans-serif;
+  font-size:16px;
+  text-indent: 0.5em;
+  color: white;
 }
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown a:hover {background-color: #f1f1f1}
-
-.show {display:block;}
