--- a/FrontEnd/custom_form/form.scss
+++ b/FrontEnd/custom_form/form.scss
@@ -1,26 +1,50 @@
-.form-group{
-    display:flex;
-    .form-control{
-        width:40%;
-        
+.form-group {
+    display: flex;
+    .form-control {
+        width: 40%;
     }
-    p{
-        align-self:flex-end;
+    p {
+        align-self: flex-end;
     }
-    .custom-input{
-        width:100%;
-        display:flex;
-        flex-direction:column;
+    .custom-input {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
         align-items: flex-start;
-        input{
-            width:100%;
+        input {
+            width: 100%;
         }
     }
 }
-.information-pair{
-    width:95%;
-    &:not(:last-child){
-            padding-right:10px;
-    }
 
+.information-pair {
+    width: 100%;
+    &:not(:last-child) {
+        padding-right: 10px;
+    }
+}
+
+.custom-input-row {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    label {
+        align-self: flex-start;
+    }
+    .custom-section {
+        margin: 0 10px;
+        height: 40px;
+        display: flex;
+        align-items: flex-end;
+    }
+    .ui-dform-radiobuttons{
+        margin-top: 25px;
+        input{
+            margin-right:5px;
+        }
+        label{
+            margin-right:10px;
+        }
+    }
 }
