--- a/FrontEnd/custom_form/form.scss
+++ b/FrontEnd/custom_form/form.scss
@@ -11,6 +11,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        justify-content: center;
         input {
             width: 100%;
         }
@@ -23,7 +24,9 @@
         padding-right: 10px;
     }
 }
-
+label{
+    text-align: left;
+}
 .custom-input-row {
     width: 100%;
     display: flex;
