--- a/FrontEnd/custom_form/form.css
+++ b/FrontEnd/custom_form/form.css
@@ -24,8 +24,7 @@ label {
 .custom-input-row {
   width: 100%;
   display: flex;
-  flex-direction: row;
-  align-items: center; }
+  flex-direction: row; }
   .custom-input-row label {
     align-self: flex-start; }
   .custom-input-row .custom-section {
@@ -39,5 +38,8 @@ label {
       margin-right: 5px; }
     .custom-input-row .ui-dform-radiobuttons label {
       margin-right: 10px; }
+
+input[type=checkbox] {
+  margin-right: 10px; }
 
 /*# sourceMappingURL=form.css.map */
