--- a/FrontEnd/custom_form/form.scss
+++ b/FrontEnd/custom_form/form.scss
@@ -31,7 +31,6 @@ label{
     width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: center;
     label {
         align-self: flex-start;
     }
@@ -50,4 +49,7 @@ label{
             margin-right:10px;
         }
     }
+}
+input[type=checkbox]{
+    margin-right: 10px;
 }
