--- a/FrontEnd/custom_form/form.css
+++ b/FrontEnd/custom_form/form.css
@@ -8,8 +8,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: center; }
+    align-items: flex-start; }
     .form-group .custom-input input {
       width: 100%; }
 
@@ -41,5 +40,18 @@ label {
 
 input[type=checkbox] {
   margin-right: 10px; }
+
+#myform3 .custom-input {
+  justify-content: center; }
+
+.ui-dform-ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start; }
+
+#myform6 .sub-title {
+  display: flex;
+  justify-content: flex-start; }
 
 /*# sourceMappingURL=form.css.map */
