--- a/FrontEnd/custom_form/form.scss
+++ b/FrontEnd/custom_form/form.scss
@@ -11,7 +11,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        justify-content: center;
+      
         input {
             width: 100%;
         }
@@ -52,4 +52,21 @@ label{
 }
 input[type=checkbox]{
     margin-right: 10px;
+}
+#myform3{
+    .custom-input{
+          justify-content: center;
+    }
+}
+.ui-dform-ul{
+        display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+#myform6{
+    .sub-title{
+        display: flex;
+        justify-content: flex-start;
+    }
 }
