--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/login.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
 
 <!-- our own files -->
 
-<link rel="stylesheet" href="login_signup2.css" type="text/css" media="screen"/>
+<link rel="stylesheet" href="CSS/login_signup2.css" type="text/css" media="screen"/>
 
 </head>
 
