--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/register.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/register.html
@@ -16,7 +16,7 @@
 
 <!-- our own files -->
 
-<link rel="stylesheet" href="../CSS/login_signup2.css" type="text/css" media="screen"/>
+<link rel="stylesheet" href="CSS/login_signup2.css" type="text/css" media="screen"/>
 
 </head>
 
@@ -31,7 +31,7 @@
             
             <h1>Sign Up</h1>
             
-            <form action="http://localhost:8090/register" method="POST">
+            <form action="/register" method="POST">
 
                 <div class="field-wrap">
                     <label >Email Address:</label><br>
@@ -49,7 +49,6 @@
                 </div>
 
                 <button type="submit" class="button button-block"/>Get Started</button>
-                              <c:out value="${msg}" escapeXml="false"></c:out>
             </form>
         </div>
     </div>
