Fixed some errors.

--- a/FrontEnd/landing_page/css/style.css
+++ b/FrontEnd/landing_page/css/style.css
@@ -11,7 +11,7 @@ button {
 }
 
 .right {
-	float: right !important;
+	float: right;
 }
 
 header {
@@ -25,78 +25,38 @@ header {
 
 h1, h2 {
 	color: white;
-}
-.intro h1, h2 {
-	color: white;
 	text-shadow: 1px 1px 2px black, 0 0 1em gray, 0 0 0.2em darkblue;
 }
 
-#beneficii {
+.beneficii {
 	padding-top: 75px;
 	background-color: #EDEFF3;
 	min-height: 640px;
 }
 
-#beneficii h2 {
-	color: #20547E;
-	line-height: 1.7;
-	text-shadow: unset;
-}
-
-#beneficii h1 {
-	color: #20547E;
-	font-size: 3em;
-}
-
-#impresii {
+.impresii {
 	padding-top: 75px;
 	background-color: #3388CB;
 	min-height: 640px;
 }
 
-#impresii h4 {
-	color: white;
-}
-
-#impresii h1 {
-	color: white;
-	font-size: 3em;
-}
-#impresii h4 {
-	text-align: justify;
-}
-
-#contact {
+.contact {
 	background-color: #EDEFF3;
 	min-height: 640px;
 }
 
-#padded {
+.padded {
 	padding: 10%;
 }
 
-#right {
-	float: right;
-}
-
-#first {
+.first {
 	margin-top: 5%;
 	margin-bottom: 7%;
 }
 
-#contactImg {
+.contactImg {
 	height: 640px;
 	float: left;
-}
-
-#contact h2 {
-	color: black;
-	text-shadow: unset;
-}
-
-#contact h1 {
-	color: #20547E;
-	font-size: 3em;
 }
 
 .detalii {
