index + Sign UP + login 50%

--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/static/CSS/login_signup2.css
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/static/CSS/login_signup2.css
@@ -123,7 +123,7 @@ textarea {
 .logo {
   width: auto;
   height: 50px;
-  background: url("../Image/logo.png");
+  background: url("../images/logo.png");
   /*background-color: #3388CB;*/
   background-position: center;
   background-size: 200px auto;
