--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/login.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/login.html
@@ -35,6 +35,7 @@
          <div class="field-wrap">
            <label >Email Address:</label><br>
            <input type="text" placeholder="Enter Email Address" name="email" required>
+             <p id="error_msg" th:text="${inv}"></p>
          </div>
          
          <div class="field-wrap">
@@ -45,7 +46,7 @@
          <p class="forgot"><a href="#">Forgot Password?</a></p>
          
          <button class="button button-block"/>Log In</button>
-       
+           <p id="error_msg" th:text="${failure}"></p>
        </form>
   </div>
  </div>
