--- a/FrontEnd/templates/form.html
+++ b/FrontEnd/templates/form.html
@@ -2,10 +2,10 @@
 <head>
     <title>Form</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script type="text/javascript" src="jquery.dform-1.1.0.min.js"></script>
+    <script type="text/javascript" src="../static/js/jquery.dform-1.1.0.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
           crossorigin="anonymous">
-    <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="../static/style/form.css">
 
 </head>
 <body>
@@ -168,6 +168,6 @@
 
 
 
-    <script src="form.js"></script>
+    <script src="../static/js/form.js"></script>
 </body>
 </html>
