index + Sign Up + Log In done :+1:

--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/login.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/login.html
@@ -40,7 +40,7 @@
          
          <div class="field-wrap">
            <label>Password:</label><br>
-           <input type="password" placeholder="Set A Password" name="psw" required>
+           <input type="password" placeholder="Set A Password" name="pswall" required>
          </div>
          
          <p class="forgot"><a href="#">Forgot Password?</a></p>
