--- a/FrontEnd/templates/dashboard_admin.html
+++ b/FrontEnd/templates/dashboard_admin.html
@@ -17,7 +17,7 @@
 
 
 <div class="content">
-    <img src="../static/styleavatar.png" alt="avatar" width=25%>
+    <img src="../static/images/avatar.png" alt="avatar" width=25%>
     <h3>Administrator</h3>
 </div>​
 
