--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/index.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/index.html
@@ -9,10 +9,10 @@
     <title>FII Admis</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../CSS/bootstrap.css" rel="stylesheet">
+    <link href="../style/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../CSS/style.css" rel="stylesheet">
+    <link href="../style/style.css" rel="stylesheet">
 </head>
 
 <body id="top">
@@ -43,8 +43,8 @@
                     </li>
                 </ul>
                 <div class="right">
-                	<form action="../login">
-                		<button  tabindex="2"  accesskey="l">LOG IN</button>
+                	<form action="/login">
+                		<button tabindex="2"  accesskey="l">LOG IN</button>
                 	</form>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                 <div class="intro">
                     <h1>Bine ai venit la <br> Facultatea de Informatic&#259; Ia&#351;i</h1>
                     <h2>Al&#259;tur&#259;-te facult&#259;&#355;ii noastre! Creeaz&#259;&#355;i un cont, ap&#259;s&#226;nd butonul de mai jos.</h2>
-                    <form action="../register">
+                    <form action="/register">
                     	<button tabindex="3"  accesskey="s">SIGN UP</button>
                     </form>
                 </div>
@@ -75,19 +75,17 @@
                 <div class="col-md-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1 style="color: #20547E; font-size: 3em; text-shadow: unset;">Ce i&#355;i oferim?</h1>
-                            <h2 style="color: #20547E; line-height: 1.7; text-shadow: unset;">
-	                            <ul>
-	                                <li>un mediu academic stimulativ</li>
-	                                <li>flexibilitate &#238;n alegerea programului de studii</li>
-	                                <li>tehnologii software de v&#226;rf</li>
-	                                <li>laboratoare cu dot&#259;ri de ultim&#259; or&#259;</li>
-	                                <li>acces gratuit la documenta&#355;ii &#351;i software</li>
-	                                <li>oportunit&#259;&#355;i de stagii &#238;n strainatate</li>
-	                                <li>echip&#259; de prieteni</li>
-	                                <li>o diplom&#259; recunoscut&#259; &#351;i apreciat&#259; de toate universit&#259;&#355;ile &#351;i companiile software din lume</li>
-	                            </ul>
-	                        </h2>
+	                        <h1 style="color: #20547E; font-size: 3em; text-shadow: unset;">Ce i&#355;i oferim?</h1>
+                            <ul>
+                                <li>un mediu academic stimulativ</li>
+                                <li>flexibilitate &#238;n alegerea programului de studii</li>
+                                <li>tehnologii software de v&#226;rf</li>
+                                <li>laboratoare cu dot&#259;ri de ultim&#259; or&#259;</li>
+                                <li>acces gratuit la documenta&#355;ii &#351;i software</li>
+                                <li>oportunit&#259;&#355;i de stagii &#238;n strainatate</li>
+                                <li>echip&#259; de prieteni</li>
+                                <li>o diplom&#259; recunoscut&#259; &#351;i apreciat&#259; de toate universit&#259;&#355;ile &#351;i companiile software din lume</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -131,12 +129,12 @@
             <div class="col-md-6">
                     <div class="detalii">
                     <h1 style="color: #20547E; font-size: 3em; text-shadow: unset;">Cum ne pute&#355;i contacta?</h1>
-                    <h3>
+                    <h2 style="color: #000; font-size: 1.7em; text-shadow: unset;">
                         <strong>Adres&#259;: </strong><br>
                         Facultatea de Informatic&#259;, Universitatea "Al. I. Cuza", <br>
                         General Berthelot, 16, <br>
                         IA&#350;I, 700483, ROM&#194;NIA <br>
-                    </h3>
+                    </h2>
                     <h3><strong>Telefon: </strong><a href="tel:+40232201090">+40 232 201 090</a></h3>
                     <h3><strong>Fax: </strong>+40 232 201 490</h3>
                     <h3><strong>E-mail: </strong><a href="mailto:secretariat@info.uaic.ro">secretariat@info.uaic.ro</a></h3>
@@ -161,10 +159,10 @@
 
 <!-- Scripts -->
     <!-- jQuery -->
-    <script type="text/javascript" src="../JS/jquery.js"></script>
+    <script type="text/javascript" src="../js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script type="text/javascript" src="../JS/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
     <!-- Smooth scrolling JavaScript -->
-    <script type="text/javascript" src="../JS/smooth.js"></script>
+    <script type="text/javascript" src="../js/smooth.js"></script>
 </body>
 </html>
