--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/static/style/dashboard.css
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/static/style/dashboard.css
@@ -1,5 +1,6 @@
 body {
-    margin: 0;
+   	margin: 0;
+	background-color:#e6e6e6;
 }
 
 ul {
@@ -42,14 +43,11 @@ hr {
     border-style: inset;
     border-width: 1px;
 }
-
 p{
 	font-size:70%;
 	color: #cccccc;
   font-family: "Roboto", sans-serif;
 }
-
-
 #contact{
   margin-bottom: 0;
   margin-left: 15px;
@@ -60,7 +58,7 @@ p{
 .logo {
   width: auto;
   height: 50px;
-  background: url("/images/logo.png");
+  background: url("logo.png");
   background-color: #1C537E;
   background-position: left;
   background-size: 130px auto;
@@ -176,47 +174,11 @@ p{
 h3{
   font-family: "Roboto", sans-serif;
   font-size:16px;
-  text-indent: 0.3em;
+  text-indent: 0.5em;
   color: #cccccc;
 }
 .widget-content img{
   display: block;
   margin-left: auto;
   margin-right: auto ;
-}
-
-
-input {
-    width: 30%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-left: 16px;
-}
-
-input[type=submit] {
-    width: 13%;
-    background-color: #3388CB;
-    color: white;
-    padding: 14px 20px;
-	  margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-label{
-  margin-left: 16px;
-  font-family: "Roboto", sans-serif;
-  font-size:16px;
-}
-
-h3{
-  font-family: "Roboto", sans-serif;
-  font-size:16px;
-  text-indent: 0.5em;
-  color: white;
 }
