--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/register.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/register.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>Loginform</title>
+<title>Register form</title>
 <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"/>
 
 <!-- Latest compiled and minified CSS -->
@@ -16,7 +16,7 @@
 
 <!-- our own files -->
 
-<link rel="stylesheet" href="CSS/login_signup2.css" type="text/css" media="screen"/>
+<link rel="stylesheet" href="../style/login_signup2.css" type="text/css" media="screen"/>
 
 </head>
 
@@ -31,26 +31,27 @@
             
             <h1>Sign Up</h1>
             
-            <form action="/register" method="POST">
+            <form action="/register" method="post">
 
                 <div class="field-wrap">
                     <label >Email Address:</label><br>
                     <input type="text" placeholder="Enter Email Address" name="email" required>
-                    <p id="error_msg" th:text="${error}"></p>
+                    <p id="error_msg" th:text="${inv}"></p>
                 </div>
-
                 <div class="field-wrap">
                     <label>Password:</label><br>
-    		 	    <input type="password" placeholder="Set A Password" name="password" required>
+    		 	    <input type="password" placeholder="Set A Password" name="pswall" required>
     		    </div>
 
                 <div class="field-wrap">
-                    <label>Confirm Password:</label><br>
-                    <input type="password" placeholder="Confirm  Password" name="confirm_password" required>
+                    <label>Cofirm Password:</label><br>
+                    <input type="password" placeholder="Set A Password" name="cpswall" required>
+                    <p id="error_msg" th:text="${match}"></p>
                 </div>
 
+                
                 <button type="submit" class="button button-block"/>Get Started</button>
-
+                <p id="error_msg" th:text="${error}"></p>
             </form>
         </div>
     </div>
