--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
@@ -26,7 +26,7 @@
   <li><a class="active" href="dashboard.html">Dashboard</a></li>
   <li><a href="#settings">Settings</a></li>
   <li><a href="form.html">Application Form</a></li>
-  <li><a href="#disconn">Disconnect</a></li>
+  <li><a href="/disconnect">Disconnect</a></li>
 
   <hr>
 
