--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard_admin.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard_admin.html
@@ -28,7 +28,7 @@
   <li><a href="#form">View Applications</a></li>
   <li><a href="#form">Teachers</a></li>
   <li><a href="#form">Classrooms</a></li>
-  <li><a href="#disconn">Disconnect</a></li>
+  <li><a href="/disconnect">Disconnect</a></li>
   <hr>
 
 
