--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard_admin.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard_admin.html
@@ -25,7 +25,7 @@
 
   <li><a class="active" href="#dash">Dashboard</a></li>
   <li><a href="#settings">Settings</a></li>
-  <li><a href="#form">View Applications</a></li>
+  <li><a href="tabel_candidati.html">View Applications</a></li>
   <li><a href="#form">Teachers</a></li>
   <li><a href="#form">Classrooms</a></li>
   <li><a href="/disconnect">Disconnect</a></li>
