--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/form.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/form.html
@@ -2,7 +2,7 @@
 <head>
     <title>Form</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script type="text/javascript" src="../js/jquery.dform-1.1.0.min.js"></script>
+    <script type="text/javascript" src="../JS/jquery.dform-1.1.0.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
           crossorigin="anonymous">
     <link rel="stylesheet" href="../style/form.css">
@@ -165,6 +165,6 @@
             </div>
         </div>
     </div>
-    <script src="../static/js/form.js"></script>
+    <script src="../JS/form.js"></script>
 </body>
 </html>
