--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/tabel_candidati.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/tabel_candidati.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="../JS/jquery.dform-1.1.0.min.js"></script>
     <meta charset="UTF-8">
     <title>Tabel Candidati</title>
 </head>
