--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/tabel_candidati.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/tabel_candidati.html
@@ -7,6 +7,13 @@
     <title>Tabel Candidati</title>
 </head>
 <body>
-    <script src="../static/js/get_candidati.js"></script>
+    <script src="../JS/get_candidati.js"></script>
+    <script>
+       /* $(document).ready(function () {
+            $.getJSON('http://localhost:9999/model/candidati_formuri').done(function(data) {
+                console.log(data)
+            })
+        }); */
+    </script>
 </body>
 </html>
