--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/login.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
 <title>Loginform</title>
 <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"/>
