--- a/FrontEnd/templates/dashboard_admin.html
+++ b/FrontEnd/templates/dashboard_admin.html
@@ -25,6 +25,7 @@
 
   <li><a class="active" href="#dash">Dashboard</a></li>
   <li><a href="#settings">Settings</a></li>
+  <li id="news"><a href="#news">Add News</a></li>
   <li><a href="#form">View Applications</a></li>
   <li><a href="#form">Teachers</a></li>
   <li><a href="#form">Classrooms</a></li>
@@ -95,5 +96,21 @@
 
    </div>
 
+	<div id="news_modal" class="news">
+	  <div class="news_content">
+	  	<div class="news_header">
+	    	<span class="close">&times;</span>
+	    	<h2>Add News</h2>
+	    </div>
+	    <div class="news_body">
+		    <form action="#post_news">
+		      <textarea id="news_text"></textarea>
+		      <button>Post</button>
+		    </form>
+	    </div>
+	  </div>
+	</div>
+
+<script type="text/javascript" src="../static/js/admin_news.js"></script>
 </body>
 </html>
