Added news title input

--- a/FrontEnd/templates/dashboard_admin.html
+++ b/FrontEnd/templates/dashboard_admin.html
@@ -104,8 +104,9 @@
 	    </div>
 	    <div class="news_body">
 		    <form action="#post_news">
-		      <textarea id="news_text"></textarea>
-		      <button>Post</button>
+			<input type="text" name="news_title" placeholder="News title">
+			<textarea id="news_text"></textarea>
+			<button>Post</button>
 		    </form>
 	    </div>
 	  </div>
