--- a/FrontEnd/static/style/dashboard_admin.css
+++ b/FrontEnd/static/style/dashboard_admin.css
@@ -234,6 +234,12 @@ h3{
   margin-top: 2%;
 }
 
+.news_body input {
+  margin-top: 2%;
+  padding: 10px;
+  width: 97%;
+}
+
 .news_body button {
   margin: 5px auto;
   padding: 10px 30px;
