Removed title input

--- a/FrontEnd/templates/dashboard_admin.html
+++ b/FrontEnd/templates/dashboard_admin.html
@@ -104,7 +104,7 @@
 	    </div>
 	    <div class="news_body">
 		    <form action="#post_news">
-			<input type="text" name="news_title" placeholder="News title">
+			<!--<input type="text" name="news_title" placeholder="News title"> -->
 			<textarea id="news_text"></textarea>
 			<button>Post</button>
 		    </form>
