--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
@@ -24,7 +24,7 @@
 
 
   <li><a class="active" href="dashboard.html">Dashboard</a></li>
-  <li><a href="form.html">Application Form</a></li>
+  <li><a href="https://localhost:8090/preform">Application Form</a></li>
   <li><a href="/disconnect">Disconnect</a></li>
 
   <hr>
