--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/profesori.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/profesori.html
@@ -57,7 +57,7 @@
         </div>
         <div class="widget-content">
             <br>
-            <form th:action="@{/delete}" method="post">
+            <form th:action="@{/operation}" method="post">
                 <label for="cod">Nume:<br>
                 </label> <input type="text" name="nume" id="cod" value="" />
                 <br><br>
@@ -65,10 +65,11 @@
                 </label> <input type="text" name="prenume" id="etaj" value="" />
                 <br><br>
                 <label for="nr">CNP:<br>
-                </label> <input type="number" name="cnp" id="nr" value="" />
+                </label> <input type="number" name="pcnp" id="nr" value="" />
                 <br><br>
                 <input type="submit" name="button" value="add">
                 <input type="submit" name="button" value="delete">
+                <input type="submit" name="button" value="see teachers">
             </form>
         </div>
     </div>
