--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/candidates_admin.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/candidates_admin.html
@@ -12,6 +12,15 @@
             <td th:text="${entry.candidate.cnp}"></td>
             <td th:text="${entry.candidate.firstname}"></td>
             <td th:text="${entry.candidate.lastname}"></td>
+
+            <td class="view_form_button">
+                <!--Fiecare href se expandeaza intr-un "candidates_whatever?cnp=cnpul_candidatului"
+                    Aparent e relevant @ si nu $.
+                -->
+                <a th:href="@{/candidates_view_form(cnp=${entry.candidate.cnp})}">Formular</a>
+                <a th:href="@{/candidates_accept(cnp=${entry.candidate.cnp})}">Accepta</a>
+                <a th:href="@{/candidates_reject(cnp=${entry.candidate.cnp})}">Refuza</a>
+            </td>
         </tr>
     </table>
 
