--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard_admin.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard_admin.html
@@ -26,8 +26,8 @@
   <li><a class="active" href="#dash">Dashboard</a></li>
   <li><a href="#settings">Settings</a></li>
   <li><a href="candidates_admin">View Applications</a></li>
-  <li><a href="profesori.html">Teachers</a></li>
-  <li><a href="#form">Classrooms</a></li>
+  <li><a href="teachers">Teachers</a></li>
+  <li><a href="classroom">Classrooms</a></li>
   <li><a href="/disconnect">Disconnect</a></li>
   <hr>
 
